pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingMultiLineStringDelimiter.pkl
res1 = """abc
res2 = 42

